--- a/requirements.txt
+++ b/requirements.txt
@@ -7,80 +7,156 @@ anyio==4.10.0
 asgiref==3.9.1
 attrs==25.3.0
 audioop-lts==0.2.2
+backoff==2.2.1
+bcrypt==5.0.0
 blinker==1.9.0
+build==1.3.0
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
+chromadb==1.3.4
 click==8.2.1
 colorama==0.4.6
+coloredlogs==15.0.1
 comtypes==1.4.12
+dataclasses-json==0.6.7
 distro==1.9.0
 Django==5.2.5
+durationpy==0.10
+filelock==3.20.0
+flatbuffers==25.9.23
 frozenlist==1.7.0
+fsspec==2025.10.0
 gitdb==4.0.12
 GitPython==3.1.45
-google-ai-generativelanguage==0.6.15
+google-ai-generativelanguage==0.4.0
 google-api-core==2.25.1
 google-api-python-client==2.181.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
+google-generativeai==0.3.2
 googleapis-common-protos==1.70.0
+greenlet==3.2.4
 grpcio==1.74.0
-grpcio-status==1.71.2
+grpcio-status==1.62.3
 h11==0.16.0
+hf-xet==1.2.0
 httpcore==1.0.9
 httplib2==0.30.0
+httptools==0.7.1
 httpx==0.28.1
+httpx-sse==0.4.3
+huggingface_hub==1.1.2
+humanfriendly==10.0
 idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
 Jinja2==3.1.6
 jiter==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.4.1
+kubernetes==34.1.0
+langchain==1.0.5
+langchain-classic==1.0.0
+langchain-community==0.4.1
+langchain-core==1.0.4
+langchain-text-splitters==1.0.0
+langgraph==1.0.2
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.2
+langgraph-sdk==0.2.9
+langsmith==0.4.42
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+mmh3==5.2.0
+mpmath==1.3.0
 multidict==6.6.4
+mypy_extensions==1.1.0
 narwhals==2.3.0
 numpy==2.3.2
+oauthlib==3.3.1
+onnxruntime==1.23.2
 openai==0.28.0
+opentelemetry-api==1.38.0
+opentelemetry-exporter-otlp-proto-common==1.38.0
+opentelemetry-exporter-otlp-proto-grpc==1.38.0
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
+orjson==3.11.4
+ormsgpack==1.12.0
+overrides==7.7.0
 packaging==25.0
 Panda3D==1.10.15
 pandas==2.3.2
 pillow==11.3.0
+posthog==5.4.0
 propcache==0.3.2
 proto-plus==1.26.1
-protobuf==5.29.5
+protobuf==4.25.8
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+PyAudio==0.2.14
+pybase64==1.4.2
 pydantic==2.11.7
+pydantic-settings==2.12.0
 pydantic_core==2.33.2
 pydeck==0.9.1
+Pygments==2.19.2
 pyparsing==3.2.3
+PyPika==0.48.9
+pypiwin32==223
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pyttsx3==2.99
 pytz==2025.2
+pywin32==311
+PyYAML==6.0.3
 referencing==0.36.2
 requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.2.0
 rpds-py==0.27.1
 rsa==4.9.1
+shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SpeechRecognition==3.14.3
+SQLAlchemy==2.0.44
 sqlparse==0.5.3
 standard-aifc==3.13.0
 standard-chunk==3.13.0
 streamlit==1.49.1
+sympy==1.14.0
 tenacity==9.1.2
+tokenizers==0.22.1
 toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
+typer==0.20.0
+typer-slim==0.20.0
+typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
-urllib3==2.5.0
+urllib3==2.3.0
+uvicorn==0.38.0
 watchdog==6.0.0
+watchfiles==1.1.1
+websocket-client==1.9.0
+websockets==15.0.1
+whitenoise==6.11.0
+xxhash==3.6.0
 yarl==1.20.1
-gunicorn==21.2.0
-
+zipp==3.23.0
+zstandard==0.25.0
